# robot_interface2

./: .clang-tidy  CMakeLists.txt
cmake/: detect-raspi.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  raspi_hardware.cmake  xstypes.cmake
include/raspiHardware/: Common.hpp  DMA.hpp  DMASPI.hpp  GPIO.hpp  Mmap.hpp  SPI.hpp  SimultaneousSPI.hpp  UART.hpp  UARTDMAReader.hpp  UncachedMem.hpp  mailbox.h
include/robot_interface2/: InterfaceData.hpp  span.hpp
include/robot_interface2/Flysky/: Common.hpp  FlyskyRemoteReceiver.hpp  iBusParser.hpp
include/robot_interface2/motor/: MotorController.hpp
include/robot_interface2/stateEstimator/: StateEstimator.hpp
include/robot_interface2/utils/: Common.hpp  MessageConversion.hpp  NlohmannJsonEigenConversion.hpp
include/robot_interface2/xsens/: MTiParser.hpp  MTiReceiver.hpp
src/: DataRecorder.cpp  FlyskyReceiverExec.cpp  MotorControllerExec.cpp  MotorControllerTest.cpp  MovementController.cpp  RobotSystemPub.cpp  RosJointStateToCmdPub.cpp  RosJointStateToCmdPubPid.cpp  testSpiDma.cpp  testSpiDma2.cpp
src/Flysky/: FlyskyRemoteReceiver.cpp
src/flysky/: FlyskyReceiverExec.cpp  FlyskyRemoteReceiver.cpp  iBusParser.cpp
src/motor/: MotorController.cpp  MotorControllerExec.cpp
src/raspiHardware/: DMASPI.cpp  SimultaneousSPI.cpp  UARTDMAReader.cpp  UncachedMem.cpp  mailbox.c
src/stateEstimator/: StateEstimator.cpp  StateEstimatorExec.cpp  TrapzIntegrator.hpp
src/utils/: MessageConversion.cpp
src/xsens/: MTiParser.cpp  MTiReceiver.cpp  MTiReceiverExec.cpp
src/xstypes/: datapacket_p.cpp  xsdatapacket.cpp  xsdebugcounters.cpp  xssensorranges.cpp
test/: CMakeLists.txt
test/src/: MessageConversionTest.cpp  test1.cpp
test/src/dummies/: dummyRpiSPIDriver.hpp
